style.css
:root {
    --background
}


* {
    color: rgb(190, 190, 190);
    font-size: 40px;
}

div,
span,
input {
}

html{
    padding: 0;
    border:0;
    margin: 0;
}


#body {
    display: flex;
    align-items: center;
    justify-content: center;
    background-image: var(--background);
    border:0;
    margin: 0;
    background-size: cover;
    height: 100vh;
    max-width: 100vw;
}

#background-img {
    width: 100vw;
    height: 100vh;
    object-fit: cover;
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
    z-index: -1;
 }

.btn{
    background-color: rgb(184, 184, 184);
    color: rgb(0, 0, 0);
    border: 0;
    cursor:alias;
}

.btnFrame .btn{
    box-shadow: 0px 0px 2.5px black;
}

#inputFrame{
    display:flex;
    flex:1;
}

#displayframe{
    
}

#previousCalculation{
    position: fixed;
    z-index: 2;
    top: 0;
}

#displayTop{
    min-width: 10px !important;
    white-space: nowrap;
    text-indent: 10px;
    border: 2px solid black;
    text-shadow: 0px 0px 0px;
}

input:focus{
    outline: none;
}

#displayBottom{
    min-width: 10px !important;
    white-space: nowrap;
    text-indent: 16px;
    height: 40px;
    font-size: 35px;
    text-shadow: 0px 0px 0px;
    border-radius: 0px 0px 10px 10px;
}

#calculatorFrame{
    z-index: 2;
    position: absolute;
    height: fit-content;
    width: 448px;
    overflow: auto;
    padding: 0;
    display: flex;
    flex-direction: column;
    flex:1;
    background-size: contain;
    border: 3.4px solid black;
    border-radius: 32px 32px 18px 18px;
    background-color: rgba(0, 0, 0, 0.377);
    box-shadow: 4px 4px 60px black;
    transform-origin: top left;

    backdrop-filter: blur(10px);
}

#dragBar{
    height: 1.2em;
    display: flex;
    justify-content: space-between;
    background-color: rgb(214, 214, 214);
    cursor: pointer;
}

#zoomButtons{
    display: block;
    height: 100%;
    width: 110px;
    margin-bottom: 0;
    display: flex;
    background-color: rgba(214, 214, 214, 0);
}

#calcLogBtns{
    display: block;
    height: 100%;
    width: fit-content;
    margin-bottom: 0;
    display: flex;
}

#nextCalcLogBtn,
#previousCalcLogBtn{
    font-weight: 900;
    padding-left: 14px;
    padding-right: 14px;
    padding-top: 2px;
    background-color: rgba(214, 214, 214, 0);
    color:black;
    border-right: 1px solid black; 
    box-shadow: 0px 0px 1.5px white;
    cursor:alias;
}

#zoomButtons > *{
    border-radius: 0;
    width: 100%;
    height: 100%;
    margin: 0;
    border: 0;
    box-shadow: 0px 0px 1.5px white; 
}

#zoomoutBtn{
    color:black;
    border-left: 1px solid black;
    background-color: rgba(214, 214, 214, 0);
}

#zoominBtn{
    color:black;
    background-color: rgba(214, 214, 214, 0);
    border-left: 1px solid black;
    padding-right: 10px;
}



.suggestions {
    color: rgb(219, 219, 219)
}

#btnsFrameMain{
 padding:1px;
 padding-right: 6px;
}

#btnFrameFunc{/
    height: fit-content;
    display:flex;
    justify-content: space-between;
    margin-left: 6px;
    margin-right: 5px;
    gap: 5.3px;
}

#btnFrameFunc > *{
    width: fit-content;
    height: fit-content;
    font-weight: 700;
    font-size: 38px;
}

#Equals{
    min-width: 90px;
    border: 5px solid black;
    padding-top: 0;
    padding-bottom: 0;
    font-size: 37px;
    height: 46px;
    text-align: center;
}

#numAndSymbolFrame{
    display: flex;
    flex-direction: column;
}

#btnsBlock1{
    display: flex;
    flex-direction: row;
    gap: 12px;
}

#btnFrameNum{
    max-width: fit-content;
    min-width: fit-content;
    height: fit-content;
    margin-left: 6px;
}

#btnFrameNum > *{
    font-size: 50px;
    width: 50px;
    margin-right: 0;
}

#btnFrameSymbol{
    width:365px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

#btnFrameSymbol > *{
    display: flex;
    justify-content: space-between;
}

button{
    margin: 0px;
    border-radius: 10px;
    margin-top: 5px;
    margin-bottom: 5px;
}

#equals{
    font-size: larger;
}

.symbolFrame{
    display: flex;
    justify-content: space-between;
    margin-right: 50px;
}

.symbolFrame > *{
    min-width: 50px;
    padding: 8px;
    margin-left: 2px;
}

#line1,
#line2,
#line3,
#line4{
    height: 70px;
    display: flex;
    justify-content: space-between;
}

#line5{
    display: flex;
    justify-content: space-between;
    padding-left: 4px;
    padding-right: 5px;
}

#line1 > *{
    min-width: 45px;
}

#line2 > *{
    min-width: 35px;
}

#line4 > *{
    font-size: 34px;
}

#line5{
    gap: 8.4px;
    padding-left: 5px
}

#line5 > *{
    font-size: 30px;
}


.displayFrame,
.btnFrame{
    background-color: rgba(0, 0, 0, 0);
}

.display{
    background-color: rgba(0, 0, 0, 0.30);
}

#displayTop{
    background-color: rgba(0, 0, 0, 0.10);
}

#stylingOptions{
    margin:5px;
    position: absolute;
    right:0;
    align-self: flex-start;

    border-radius: 5px;
    color: white;
    display: flex;
    flex-direction: column;
}

#themeSelection{
    right:0;
    font-size: calc(10px + 0.4vw);
    border-radius: 5px;
    color: white;
    background-color: black;
}

#themeSelection > *{
    font-size: calc(10px + 0.4vw);
    color: white;
    background-color: black;
}

#resetTheme{
    font-size: calc(10px + 0.4vw);
    align-self: flex-start;

    border-radius: 5px;
    color: white;
    background-color: black;
}

#colorPicker{
    width: fit-content;
    border: 2px solid black;
    background-color: rgba(0, 0, 0, 0);
    align-self: flex-end;
}

.pixel{
    border: 2px solid black;
    background-color: rgba(0, 0, 0, 0);

    height: 5vw;
    width: 5vw;

    color:black;
    font-size: calc(10px + 0.4vw);
    text-align: center;
}

#calcLogFrame{
    background-color: rgba(0, 0, 0, 0);
    width: calc(15vw + 150px);
    max-height: 98vh !important;
    position: absolute;
    left: 0;
    top: 0;

    margin-top: 0;
    padding: 5px;
    padding-top: 0px;

    margin-left:9px;

    display: flex;
    flex-direction: column;
    overflow: auto;

    border-radius: 0 0 calc(0.7vw + 5px)calc(0.7vw + 5px);
    box-shadow: 2px 2px 8px black;

    /*left: calc(-15vw + -150px);*/
}

.closeAnimation{
    height: 0 !important;
    overflow: hidden !important;
}

#calcLogFrame > * {
    text-align: left;
}

#calcLogHeader{
    background-color: rgb(214, 214, 214);
    border-radius: 0 0 calc(10px + 0.5vw) calc(10px + 0.5vw);
    font-size: calc(12px + 1.8vw);
    text-align: center;
    position: sticky;
    top:0;
    z-index: 1;
    margin: 0 1px 2px 1px;
    border: 2px solid black;
    color: black;
    cursor:pointer;
}

#calcLogContent{
    background-color: rgba(0, 0, 0, 0);
    scroll-behavior:smooth;
}

#calcLogContent > *{
    overflow-wrap: break-word;
    font-size: calc(30px + 0.8vw);
    background-color: rgba(255, 255, 255, 0.212);
    color: black;
}

.calculation{
    border-radius: calc(10px + 0.5vw) calc(10px + 0.5vw) 0 0;
    padding: 0 10px 0 10px;
    margin-top: 5px;
    border: 2px solid black;
}

.answer{
    border-radius: 0 0 calc(10px + 0.5vw) calc(10px + 0.5vw);
    padding: 0 10px 0 10px;
    border: 2px dashed black;
    border-top: 0;
}

::-webkit-scrollbar{
    width: 6px;
    background: #6e6e6e;
    border-radius: 5px;
}

::-webkit-scrollbar-thumb {
    border-radius: 5px;

    background-color: rgb(209, 209, 209);
  }

